# reader-rbv

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: pre-commit.yaml  pytest.yml
reader_rbv/: __init__.py  book.py  book_cache.py  book_section.py  buku.py  buku_cache.py  constants.py  exception.py  font.py  image.py  modul.py  page.py  page_cache.py  reader.py  reader_rbv.py  text.py  utils.py
reader_rbv/reader/: __init__.py  buku.py  buku_cache.py  modul.py  page.py  page_cache.py  reader.py  text.py  utils.py
tests/: conftest.py  test_reader.py  test_reader_rbv.py
