[tool.poetry]
name = "reader-rbv"
version = "0.1.0"
description = ""
authors = ["hexatester <revolusi147id@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
beautifulsoup4 = "^4.9.3"
attrs = "^20.3.0"
cachetools = "^4.2.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.4"
mypy = "^0.812"
pytest-cov = "^2.11.1"
black = "^20.8b1"
pre-commit = "^2.10.1"
python-dotenv = "^0.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
