[tool.poetry]
name = "reader-rbv"
version = "0.2.0"
description = "SDK / Client python untuk Ruang Baca Virtual Universitas Terbuka."
authors = ["hexatester <habibrohman@protonmail.com>"]
license = "AGPLv3"
readme = "README.md"
keywords = [
    "univterbuka",
    "RBV",
    "reader",
    "flowpaper",
]
classifiers=[
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Education",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]

[tool.poetry.dependencies]
python = "^3.6.1"
requests = "^2.25.1"
beautifulsoup4 = "^4.9.3"
attrs = "^20.3.0"
cachetools = "^4.2.1"
ujson = "^4.0.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.4"
mypy = "^0.812"
pytest-cov = "^2.11.1"
black = "^20.8b1"
pre-commit = "^2.10.1"
python-dotenv = "^0.15.0"
pylint = "^2.7.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
